<resources>
    <string name="app_name">Turtlebot Controller</string>
    <string name="movement_joystick">movement</string>
    <string name="head_movement">Head movement</string>

    <string name="led_toggle">LED</string>
    <string name="led_toggle_on">LED ON</string>
    <string name="led_toggle_off">LED OFF</string>
    <string name="auto">Automatic</string>
    <string name="auto_on">Automatic On</string>
    <string name="auto_off">Automatic Off</string>

    <string name="about">About</string>
    <string name="about_message">
        Turtlebot controller\n
        version 0.1\n
        Check project on github(https://github.com/eduardossampaio/turtlebot)
    </string>

    <string name="device_not_selected">Device not selected</string>
    <string name="device_selected">Device selected:</string>

    <string name="disconnect">Disconnect</string>
    <string name="error_open_connection">Error while open connection</string>
    <string name="connect_to_device">Connect to device</string>

    <string name="dialog_no_devices_found">No devices found</string>
    <string name="dialog_list_device_title">Select a device</string>
    <string name="dialog_connecting_message">Connecting to device...</string>
    <!-- Configuration -->
    <string name="configuration_forward_command">Forward</string>
    <string name="configuration_backward_command">Backward</string>
    <string name="configuration_left_command">Left</string>
    <string name="configuration_right_command">Right</string>
    <string name="configuration_leds_on_command">Leds on</string>
    <string name="configuration_leds_off_command">Leds off</string>
    <string name="configuration_delay_time">Command\'s delay time</string>
    <string name="configuration_enable_on_start">Enable bluetooth on start</string>
</resources>
